@@ -21,6 +21,7 @@ Changes in 4.1:
 - Add default move on completion location to group policy (248092)
 - Prevent torrents from sharing the same files (228220)
 - Add option to open all torrents silently
+- Add exclusion patterns to syndication plugin filters (251141)
 
 Changes in 4.0.4:
 - Make sure that syndication filter save location overrides group save location (250116)
